@@ -1,3 +1,9 @@
+2001-07-22  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext.m4 (AM_WITH_NLS): Simplify the logic. Use the same tests
+	for MSGFMT and XGETTEXT in the case we use a preinstalled GNU libintl
+	and in the case of using the included libintl.
+
 2001-06-30  Bruno Haible  <haible@clisp.cons.org>
 
 	* stdbool.m4: New file.
